# code-lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INTERNALS.md  README.md  SECURITY.md  SPEC.md  TOOLCHAIN_PLAN.md  ci.sh  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/fmt/: Cargo.toml
crates/fmt/src/: commands.rs  formatter.rs  lint_rules.rs  main.rs  util.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
docs/: package.json
docs/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
docs/app/changelog/: page.tsx
docs/app/components/: CopyButton.tsx  DocsSidebar.tsx  HomeInstall.tsx  Navbar.tsx  OsInstall.tsx  Pre.tsx  TableOfContents.tsx
docs/app/docs/: layout.tsx  page.tsx
docs/app/docs/language/: page.tsx
docs/app/docs/stdlib/: page.tsx
docs/app/install/: page.tsx
docs/app/lib/: highlight.ts
extension/vscode/: language-configuration.json  package.json
extension/vscode/syntaxes/: code-lang.tmLanguage.json
extension/zed/: extension.toml
extension/zed/languages/code-lang/: config.toml
internal/code/: code.go  code_test.go
internal/compiler/: compiler.go  compiler_test.go
internal/lexer/: lexer_test.go
internal/repl/: repl.go
internal/symbol/: builder.go
internal/token/: token.go
internal/vm/: vm.go  vm_test.go
legacy/internal/ast/: ast.go
legacy/internal/compiler/: compiler_test.go
legacy/internal/evaluator/: evaluator.go
legacy/internal/lexer/: lexer.go
legacy/internal/parser/: parser.go
legacy/internal/vm/: vm_test.go
rust-rewrite/: Cargo.toml
rust-rewrite/src/: main.rs
rust-rewrite/src/ast/: ast.rs
rust-rewrite/src/evaluator/: evaluator.rs
rust-rewrite/src/lexer/: lexer.rs
rust-rewrite/src/object/: object.rs
rust-rewrite/src/parser/: parser.rs
rust-rewrite/src/repl/: repl.rs
rust-rewrite/src/token/: token.rs
src/: lib.rs  main.rs
src/analysis/: scope.rs
src/ast/: ast.rs  mod.rs  walk.rs
src/evaluator/: evaluator.rs
src/lexer/: lexer.rs
src/object/: object.rs
src/parser/: parser.rs
src/repl/: repl.rs
src/std_lib/: array.rs  fmt.rs  fs.rs  hash.rs  http.rs  json.rs  math.rs  mod.rs  os_mod.rs  path.rs  rand.rs  strings.rs  time.rs
src/token/: token.rs
