[package]
name = "code-lang-fmt"
version = "0.2.2"
edition = "2024"
description = "Formatter, checker, and linter for code-lang"

[[bin]]
name = "code-lang-fmt"
path = "src/main.rs"

[dependencies]
code-lang = { path = "../..", version = "0.2.2" }
clap = { version = "4.6.1", features = ["derive"] }
